--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ h1{
 }
 section{
     display: flex;
+    margin-bottom: 100px;
 }
 .half-width
 {
@@ -30,5 +31,24 @@ section{
 .top-banner{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+
+}
+.pink-color{
+    color: palevioletred;
+}
+.half-width{
+    width: 50%;
+  padding-right: 5%;
+}
+.half-width img{
+    width: 80%;
+}
+.dream-big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.link-button{
+    text-decoration: none;
 
 }
